Clean up boilerplate, set react app to the GameDashboard

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ NODE_ENV=development
 
 ODDS_API_KEY=11c5cb8e11cbeaa73acfd5c45bbf9c42
 
-DATABASE_URL=postgresql://postgres:dQSCM9JFOMgdGSv4@db.sywsrcywbgltokoyppul.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres:dQSCM9JFOMgdGSv4@sywsrcywbgltokoyppul.supabase.co:5432/postgres
