--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ NODE_ENV=development
 ODDS_API_KEY=11c5cb8e11cbeaa73acfd5c45bbf9c42
 
 DATABASE_URL=postgresql://postgres:dQSCM9JFOMgdGSv4@sywsrcywbgltokoyppul.supabase.co:5432/postgres
+
+REACT_APP_API_URL = http://localhost:5000/api
